Refactoring and renaming packages.